# lakers

./: Cargo.toml
consts/: Cargo.toml
consts/src/: lib.rs
crypto/edhoc-crypto-cc2538/src/: lib.rs
crypto/edhoc-crypto-hacspec/: Cargo.toml
crypto/edhoc-crypto-hacspec/src/: lib.rs
crypto/edhoc-crypto-psa/src/: lib.rs
crypto/src/: lib.rs
examples/: coapclient.rs
examples/crypto-cc310/: Cargo.toml  README.md
examples/crypto-cc310/.cargo/: config.toml
examples/crypto-cc310/src/: main.rs
examples/crypto-nrf54l15/: Cargo.toml  README.md
examples/edhoc-rs-cc2538/src/: main.rs
examples/edhoc-rs-no_std/src/: main.rs
hacspec/: Cargo.toml
hacspec/src/: lib.rs
lib/: .Cargo.toml.swp  Cargo.toml
lib/src/: lib.rs
shared/src/: lib.rs
src/: consts.rs  edhoc.rs
