[package]
name = "crypto-cc310"
authors = ["Geovane Fedrecheski <geovane.fedrecheski@inria.fr>"]
version = "0.1.0"
edition = "2021"

[dependencies]
# cortex-m specifics
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-semihosting = { version = "0.6.0", features = ["exit"] }

# logging
defmt = "0.3"
defmt-rtt = "0.4"

# forked pac with the latest cryptocell definitions
nrf52840-pac = {package = "nrf52840-pac", git="https://github.com/geonnave/nrf-pacs.git", branch="cryptocell310", features = ["critical-section"]}

[features]
default = [  ]

[profile.release]
opt-level = 3        # Maximum optimizations for release builds
debug = true         # Include debug information for release as well (useful for profiling)
overflow-checks = true
debug-assertions = false
